--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <br>
                 <button id="submitButton" class="btn__submit" type="button" onclick="MyForm.submit()">Submit</button>
             </form>
-            <div id="resultContainer" class="result-container">
+            <div id="resultContainer" class="">
 
             </div>
         </div>
