add Success test to result container when wher response return success Chage button text

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <label class="simple-form__label" for="phone">Телефон</label>
                 <input id="myform__input-phone" class="simple-form__input" type="phone" name="phone" placeholder="+7(999)000-00-00">
                 <br>
-                <button id="submitButton" class="btn__submit" type="button" onclick="MyForm.submit()">Submit</button>
+                <button id="submitButton" class="btn__submit" type="button" onclick="MyForm.submit()">Отправить</button>
             </form>
             <div id="resultContainer" class="">
 
