Clean border of resultContainer when error. Dont know  can I add other classes besides error, success and progress.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <br>
                 <button id="submitButton" class="btn__submit" type="button" onclick="MyForm.submit()">Отправить</button>
             </form>
-            <div id="resultContainer" class="">
+            <div id="resultContainer" class="" style="border:none">
 
             </div>
         </div>
